app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "frontend.74.241.163.56.nip.io" # change the IP address here
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: webapp1-svc
            port: 
              number: 80

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: webapp-ingress
#   namespace: app
#   annotations:
#     # kubernetes.io/ingress.class: nginx
#     # nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     # nginx.ingress.kubernetes.io/use-regex: "true"
#     # nginx.ingress.kubernetes.io/rewrite-target: /$1
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /webapp1 # (/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: webapp1-svc
#             port: 
#               number: 80
#       - path: /webapp2 # (/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: webapp2-svc
#             port: 
#               number: 80
#   - host: frontend.74.241.163.56.nip.io # change the IP address here
#     http:
#       paths:
#       - path: /webapp1 # (/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: webapp1-svc
#             port: 
#               number: 80
#       - path: /webapp2 # (/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: webapp2-svc
#             port: 
#               number: 80
#       # - backend:
#       #     serviceName: webapp1-svc
#       #     servicePort: 80
#       #   path: /webapp1
#       # - backend:
#       #     serviceName: webapp2-svc
#       #     servicePort: 80
#       #   path: /webapp2
